--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1989,26 +1989,30 @@ input, select, textarea {
 		flex-wrap: wrap;
 		border-radius: 0.25em;
 		border: solid 1px rgba(255, 255, 255, 0.15);
-		background: rgba(255, 255, 255, 0.05);
+		background: rgba(0, 0, 0, 0.25);
 		margin: 0 0 2em 0;
 	}
 
-		.features section {
-			padding: 3.5em 3em 1em 7em ;
-			width: 50%;
-			border-top: solid 1px rgba(255, 255, 255, 0.15);
-			position: relative;
+	.features section {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		padding: 2.5em 3em 0.5em 7em ;
+		width: 33.3333%;
+		border-top: solid 1px rgba(255, 255, 255, 0.15);
+		position: relative;
+	}
+
+		.features section:nth-child(-n + 3) {
+			border-top-width: 0;
 		}
 
-			.features section:nth-child(-n + 2) {
-				border-top-width: 0;
-			}
+		.features section:nth-child(n) {
+			border-left: solid 1px rgba(255, 255, 255, 0.15);
+		}
 
-			.features section:nth-child(2n) {
-				border-left: solid 1px rgba(255, 255, 255, 0.15);
-			}
-
-			.features section .icon {
+			.features section .technology-logo {
 				-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease;
 				-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
 				-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease;
@@ -2027,147 +2031,147 @@ input, select, textarea {
 				opacity: 1;
 			}
 
-			.features section:nth-child(1) .icon {
+			.features section:nth-child(1) .technology-logo {
 				-moz-transition-delay: 0.15s;
 				-webkit-transition-delay: 0.15s;
 				-ms-transition-delay: 0.15s;
 				transition-delay: 0.15s;
 			}
 
-			.features section:nth-child(2) .icon {
+			.features section:nth-child(2) .technology-logo {
 				-moz-transition-delay: 0.3s;
 				-webkit-transition-delay: 0.3s;
 				-ms-transition-delay: 0.3s;
 				transition-delay: 0.3s;
 			}
 
-			.features section:nth-child(3) .icon {
+			.features section:nth-child(3) .technology-logo {
 				-moz-transition-delay: 0.45s;
 				-webkit-transition-delay: 0.45s;
 				-ms-transition-delay: 0.45s;
 				transition-delay: 0.45s;
 			}
 
-			.features section:nth-child(4) .icon {
+			.features section:nth-child(4) .technology-logo {
 				-moz-transition-delay: 0.6s;
 				-webkit-transition-delay: 0.6s;
 				-ms-transition-delay: 0.6s;
 				transition-delay: 0.6s;
 			}
 
-			.features section:nth-child(5) .icon {
+			.features section:nth-child(5) .technology-logo {
 				-moz-transition-delay: 0.75s;
 				-webkit-transition-delay: 0.75s;
 				-ms-transition-delay: 0.75s;
 				transition-delay: 0.75s;
 			}
 
-			.features section:nth-child(6) .icon {
+			.features section:nth-child(6) .technology-logo {
 				-moz-transition-delay: 0.9s;
 				-webkit-transition-delay: 0.9s;
 				-ms-transition-delay: 0.9s;
 				transition-delay: 0.9s;
 			}
 
-			.features section:nth-child(7) .icon {
+			.features section:nth-child(7) .technology-logo {
 				-moz-transition-delay: 1.05s;
 				-webkit-transition-delay: 1.05s;
 				-ms-transition-delay: 1.05s;
 				transition-delay: 1.05s;
 			}
 
-			.features section:nth-child(8) .icon {
+			.features section:nth-child(8) .technology-logo {
 				-moz-transition-delay: 1.2s;
 				-webkit-transition-delay: 1.2s;
 				-ms-transition-delay: 1.2s;
 				transition-delay: 1.2s;
 			}
 
-			.features section:nth-child(9) .icon {
+			.features section:nth-child(9) .technology-logo {
 				-moz-transition-delay: 1.35s;
 				-webkit-transition-delay: 1.35s;
 				-ms-transition-delay: 1.35s;
 				transition-delay: 1.35s;
 			}
 
-			.features section:nth-child(10) .icon {
+			.features section:nth-child(10) .technology-logo {
 				-moz-transition-delay: 1.5s;
 				-webkit-transition-delay: 1.5s;
 				-ms-transition-delay: 1.5s;
 				transition-delay: 1.5s;
 			}
 
-			.features section:nth-child(11) .icon {
+			.features section:nth-child(11) .technology-logo {
 				-moz-transition-delay: 1.65s;
 				-webkit-transition-delay: 1.65s;
 				-ms-transition-delay: 1.65s;
 				transition-delay: 1.65s;
 			}
 
-			.features section:nth-child(12) .icon {
+			.features section:nth-child(12) .technology-logo {
 				-moz-transition-delay: 1.8s;
 				-webkit-transition-delay: 1.8s;
 				-ms-transition-delay: 1.8s;
 				transition-delay: 1.8s;
 			}
 
-			.features section:nth-child(13) .icon {
+			.features section:nth-child(13) .technology-logo {
 				-moz-transition-delay: 1.95s;
 				-webkit-transition-delay: 1.95s;
 				-ms-transition-delay: 1.95s;
 				transition-delay: 1.95s;
 			}
 
-			.features section:nth-child(14) .icon {
+			.features section:nth-child(14) .technology-logo {
 				-moz-transition-delay: 2.1s;
 				-webkit-transition-delay: 2.1s;
 				-ms-transition-delay: 2.1s;
 				transition-delay: 2.1s;
 			}
 
-			.features section:nth-child(15) .icon {
+			.features section:nth-child(15) .technology-logo {
 				-moz-transition-delay: 2.25s;
 				-webkit-transition-delay: 2.25s;
 				-ms-transition-delay: 2.25s;
 				transition-delay: 2.25s;
 			}
 
-			.features section:nth-child(16) .icon {
+			.features section:nth-child(16) .technology-logo {
 				-moz-transition-delay: 2.4s;
 				-webkit-transition-delay: 2.4s;
 				-ms-transition-delay: 2.4s;
 				transition-delay: 2.4s;
 			}
 
-			.features section:nth-child(17) .icon {
+			.features section:nth-child(17) .technology-logo {
 				-moz-transition-delay: 2.55s;
 				-webkit-transition-delay: 2.55s;
 				-ms-transition-delay: 2.55s;
 				transition-delay: 2.55s;
 			}
 
-			.features section:nth-child(18) .icon {
+			.features section:nth-child(18) .technology-logo {
 				-moz-transition-delay: 2.7s;
 				-webkit-transition-delay: 2.7s;
 				-ms-transition-delay: 2.7s;
 				transition-delay: 2.7s;
 			}
 
-			.features section:nth-child(19) .icon {
+			.features section:nth-child(19) .technology-logo {
 				-moz-transition-delay: 2.85s;
 				-webkit-transition-delay: 2.85s;
 				-ms-transition-delay: 2.85s;
 				transition-delay: 2.85s;
 			}
 
-			.features section:nth-child(20) .icon {
+			.features section:nth-child(20) .technology-logo {
 				-moz-transition-delay: 3s;
 				-webkit-transition-delay: 3s;
 				-ms-transition-delay: 3s;
 				transition-delay: 3s;
 			}
 
-		.features.inactive section .icon {
+		.features.inactive section .technology-logo {
 			-moz-transform: scale(0.5);
 			-webkit-transform: scale(0.5);
 			-ms-transform: scale(0.5);
@@ -2552,7 +2556,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: rgb(89, 36, 146);
 				}
 
 				.wrapper.style3-alt .icon.major:before {
@@ -2817,6 +2821,10 @@ input, select, textarea {
 
 			ul.icons li:last-child {
 				padding-right: 0;
+			}
+
+			ul.icons li a.icon.brands.fa-linkedin-in, ul.icons li a.icon.brands.fa-github, ul.icons li a.icon.brands.fa-angellist {
+				font-size: 25px;
 			}
 
 			ul.icons li > a, ul.icons li > span {
@@ -3240,15 +3248,38 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-image: url('./images/purple-aurora-borealis.jpg');
+			background-size: cover;
+			/* background-color: #5e42a6; */
+		}
+
+		.wrapper.style-about-me {
+			background-image: -moz-linear-gradient(to bottom, #0a5e9c, #592492);
+			background-image: -webkit-linear-gradient(to bottom, #0a5e9c, #592492);
+			background-image: -ms-linear-gradient(to bottom, #0a5e9c, #592492);
+			background-image: linear-gradient(to bottom, #0a5e9c, #592492);
+			/* background-color: #0a5e9c; */
+			/* background-color: #18426f; */
+			/* background-color: #07222d; */
+			/* background-color: #000704; */
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			/* background-color: #010020; */
+			/* background-color: #04003d; */
+			/* background-color: #01023d; */
+			background-color: #010101;
+			/* background-color: #1aa6ac; */
+			/* background-color: #020023; */
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-image: -moz-linear-gradient(to bottom, #592492, #68295f);
+			background-image: -webkit-linear-gradient(to bottom, #592492, #68295f);
+			background-image: -ms-linear-gradient(to bottom, #592492, #68295f);
+			background-image: linear-gradient(to bottom, #592492, #68295f);
+			/* background-color: #5052b5;  */
+			/* background-color: #3b4b9a; */
 		}
 
 		.wrapper.style2-alt {
@@ -3256,7 +3287,12 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			/* background-color: #592492; */
+			/* background-color: #68295f; */
+			background-image: -moz-linear-gradient(to bottom, #68295f, #0e090d);
+			background-image: -webkit-linear-gradient(to bottom, #68295f, #0e090d);
+			background-image: -ms-linear-gradient(to bottom, #68295f, #0e090d);
+			background-image: linear-gradient(to bottom, #68295f, #0e090d);
 		}
 
 		.wrapper.style3-alt {
@@ -3524,7 +3560,8 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		/* background: #312450; */
+		background: #201035;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3761,14 +3798,18 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #7c2fb3;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
+				/* background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
 				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
 				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: linear-gradient(to right, #5e42a6, #b74e91); */
+				background-image: -moz-linear-gradient(to right, #0a5e9c, #b74e91);
+				background-image: -webkit-linear-gradient(to right, #0a5e9c, #b74e91);
+				background-image: -ms-linear-gradient(to right, #0a5e9c, #b74e91);
+				background-image: linear-gradient(to right, #0a5e9c, #b74e91);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
@@ -3874,7 +3915,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
+		background-image: url("images/aurora-borealis-trees.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
